--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,11 @@ h1,h2,h3,h4,h5,h6{
 p{
 	margin:0;
 }
+a{
+	color: white;
+	border: none;
+	text-decoration: none;
+}
 ul{
 	margin:0;
 	padding:0;
@@ -387,7 +392,14 @@ i.contact1 {
 	padding: 8px 10px;
 	float: right;
 }
-.formLogin input[type="text"] {
+.formLogin input[type="email"] {
+	outline: none;
+	color: #b3b3b3;
+	background: none;
+	font-size: 16px;
+	border: none;
+}
+.formLogin input[type="password"] {
 	outline: none;
 	color: #b3b3b3;
 	background: none;
